--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,23 +5,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
 
-::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #d4d4d4;
-  border-radius: 4px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #a3a3a3;
-}
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -30,7 +14,7 @@ body {
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 201.3 96.3% 32.2%;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
@@ -48,14 +32,22 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --chart-6: 240 3.7% 15.9%;
+    --chart-7: 240 4.8% 95.9%;
+    --chart-8: 240 3.7% 15.9%;
+    --chart-9: 240 4.8% 95.9%;
+    --chart-10: 240 3.7% 15.9%;
+    --chart-11: 240 4.8% 95.9%;
     --radius: 0.5rem;
-    --sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
-    --sidebar-primary: 240 5.9% 10%;
+    --navbar-background: 240 5.9% 10%;
+    --navbar-foreground: 240 4.8% 95.9%;
+    --sidebar-background: 201.3 96.3% 32.2%;
+    --sidebar-foreground: 0 0% 98%;
+    --sidebar-primary: 202 80.3% 23.9%;
     --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
-    --sidebar-border: 220 13% 91%;
+    --sidebar-accent: 201 90% 27.5%;
+    --sidebar-accent-foreground: 0 0% 98%;
+    --sidebar-border: 0 0% 98%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
   .dark {
@@ -83,6 +75,19 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --chart-6: 240 3.7% 15.9%;
+    --chart-7: 240 4.8% 95.9%;
+    --chart-8: 240 3.7% 15.9%;
+    --chart-9: 240 4.8% 95.9%;
+    --chart-10: 240 3.7% 15.9%;
+    --chart-11: 240 4.8% 95.9%;
+    --chart-7: 240 4.8% 95.9%;
+    --chart-8: 240 3.7% 15.9%;
+    --chart-9: 240 4.8% 95.9%;
+    --chart-10: 240 3.7% 15.9%;
+    --chart-11: 240 4.8% 95.9%;
+    --navbar-background: 240 5.9% 10%;
+    --navbar-foreground: 240 4.8% 95.9%;
     --sidebar-background: 240 5.9% 10%;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
@@ -94,11 +99,19 @@ body {
   }
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+::-webkit-scrollbar {
+  width: 5px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 3px;
+  background: hsl(var(--sidebar-accent-foreground));
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: hsl(var(--sidebar-accent));
+  border-radius: 3px;
 }
