--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,16 @@ body {
     --chart-9: 240 4.8% 95.9%;
     --chart-10: 240 3.7% 15.9%;
     --chart-11: 240 4.8% 95.9%;
+    --chart-12: 240 3.7% 15.9%;
+    --chart-13: 240 4.8% 95.9%;
+    --chart-14: 240 3.7% 15.9%;
+    --chart-15: 240 4.8% 95.9%;
+    --chart-16: 240 3.7% 15.9%;
+    --chart-17: 240 4.8% 95.9%;
+    --chart-18: 240 3.7% 15.9%;
+    --chart-19: 240 4.8% 95.9%;
+    --chart-20: 240 3.7% 15.9%;
+    
     --radius: 0.5rem;
     --navbar-background: 0 0% 100%;
     --navbar-foreground: 0 0% 3.9%;
