--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,7 @@ body {
     --chart-18: 240 3.7% 15.9%;
     --chart-19: 240 4.8% 95.9%;
     --chart-20: 240 3.7% 15.9%;
-    
+
     --radius: 0.5rem;
     --navbar-background: 0 0% 100%;
     --navbar-foreground: 0 0% 3.9%;
@@ -60,6 +60,7 @@ body {
     --sidebar-border: 0 0% 98%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -125,3 +126,9 @@ body {
   background: hsl(var(--primary));
   color: hsl(var(--primary-foreground));
 }
+
+
+.text-2xs {
+  font-size: 0.625rem;
+}
+
